--- a/_config.yml
+++ b/_config.yml
@@ -1,35 +1,26 @@
 # Site
-name: "Mediumish"
-title: "Mediumish"
-description: "Jekyll template, Medium styled, free for bloggers."
+name: "Sana REKBI's Blog"
+title: "Sana REKBI - Web Development & Tutorials"
+description: "A personal blog showcasing web development projects, tutorials, and insights."
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
-baseurl: /mediumish-theme-jekyll
-google_analytics: 'UA-46278016-1'
-disqus: 'demowebsite'
-mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
+baseurl: "" # Laisser vide si le site est à la racine du dépôt GitHub Pages
+google_analytics: "" # Remplace par ton ID Google Analytics si nécessaire
+disqus: "" # Supprimer ou ajouter ton identifiant Disqus si tu veux des commentaires
+mailchimp-list: "" # Supprime cette ligne si tu n'utilises pas Mailchimp
 include: ["_pages"]
 permalink: /:title/
 
 # Authors
 authors:
-  sal:
-    name: Sal
-    display_name: Sal
-    gravatar: e56154546cf4be74e393c62d1ae9f9d4
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net
-    twitter: https://twitter.com/wowthemesnet
-    description: "Author of Mediumish, a Bootstrap Medium styled template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
-  john:
-    name: John
-    display_name: John    
-    avatar: 'assets/images/avatar.png'
-    gravatar: b1cc14991db7a456fcd761680bbc8f81
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net
-    twitter: https://twitter.com/wowthemesnet
-    description: "This is the author box. Write a short description of the author here. You are currently previewing Mediumish demo, a Jekyll template compatible with Github pages."
+  sana:
+    name: Sana REKBI
+    display_name: Sana REKBI
+    avatar: 'assets/images/avatar.png' # Ajoute une image de profil ici
+    email: sana.rekbi@example.com
+    web: https://github.com/sana-rekbi 
+    twitter: https://twitter.com/sana_rekbi 
+    description: "Web developer and AI enthusiast sharing projects and tutorials on web development, AI, and data science."
 
 # Plugins
 plugins:
@@ -61,12 +52,13 @@ kramdown:
     block:
       line_numbers: true
 
-# Adsense (change to "enabled" to activate, also your client id and ad slot. Create a new ad unit from your Adsense account to get the slot.)
+# Adsense (désactivé ici, supprime si inutile)
 adsense: "disabled"
-adsense-data-ad-client: "ca-pub-3412143450191416"
-adsense-data-ad-slot: "1363087678"
+adsense-data-ad-client: ""
+adsense-data-ad-slot: ""
 
 # Lazy Images ("enabled" or "disabled")
-lazyimages: "disabled"
+lazyimages: "enabled"
 
+# Exclusions (fichiers qui ne doivent pas être inclus dans le site)
 exclude: [changelog.md, LICENSE.txt, README.md, Gemfile, Gemfile.lock]
