--- a/_config.yml
+++ b/_config.yml
@@ -1,35 +1,26 @@
 # Site
-name: "Mediumish"
-title: "Mediumish"
-description: "Jekyll template, Medium styled, free for bloggers."
+name: "Sana REKBI Blog"
+title: "Sana REKBI - Web Development & Tutorials"
+description: "A blog showcasing my web development projects, tutorials, and insights."
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
-baseurl: /mediumish-theme-jekyll
-google_analytics: 'UA-46278016-1'
-disqus: 'demowebsite'
-mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
+baseurl: "" # Laisser vide pour GitHub Pages ou Netlify
+google_analytics: "" # Ajoute ton propre ID Google Analytics si nécessaire
+disqus: "" # Si tu utilises Disqus, ajoute ton identifiant ici
+mailchimp-list: "" # Supprimé car probablement inutile dans ton cas
 include: ["_pages"]
 permalink: /:title/
 
 # Authors
 authors:
-  sal:
-    name: Sal
-    display_name: Sal
-    gravatar: e56154546cf4be74e393c62d1ae9f9d4
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net
-    twitter: https://twitter.com/wowthemesnet
-    description: "Author of Mediumish, a Bootstrap Medium styled template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
-  john:
-    name: John
-    display_name: John    
-    avatar: 'assets/images/avatar.png'
-    gravatar: b1cc14991db7a456fcd761680bbc8f81
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net
-    twitter: https://twitter.com/wowthemesnet
-    description: "This is the author box. Write a short description of the author here. You are currently previewing Mediumish demo, a Jekyll template compatible with Github pages."
+  sana:
+    name: Sana REKBI
+    display_name: Sana REKBI
+    gravatar: # Tu peux ajouter un identifiant gravatar si nécessaire
+    email: sana.rekbi@example.com
+    web: https://github.com/sana-rekbi
+    twitter: https://twitter.com/sana_rekbi
+    description: "Web developer and AI enthusiast sharing projects and tutorials on web development, AI, and data science."
 
 # Plugins
 plugins:
@@ -38,7 +29,7 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-archives
-    
+
 # Archives
 jekyll-archives:
   enabled:
@@ -46,11 +37,11 @@ jekyll-archives:
   layout: archive
   permalinks:
     category: '/category/:name/'
-    
+
 # Pagination 
 paginate: 6
 paginate_path: /page:num/
-    
+
 # Other
 markdown: kramdown
 
@@ -61,12 +52,14 @@ kramdown:
     block:
       line_numbers: true
 
-# Adsense (change to "enabled" to activate, also your client id and ad slot. Create a new ad unit from your Adsense account to get the slot.)
+# Adsense (désactivé par défaut)
 adsense: "disabled"
-adsense-data-ad-client: "ca-pub-3412143450191416"
-adsense-data-ad-slot: "1363087678"
+adsense-data-ad-client: ""
+adsense-data-ad-slot: ""
 
 # Lazy Images ("enabled" or "disabled")
 lazyimages: "disabled"
 
+# Exclusions
 exclude: [changelog.md, LICENSE.txt, README.md, Gemfile, Gemfile.lock]
+
